# siftmatch

./: README.md  siftmatch.sln
siftmatch/: CMakeLists.txt  aysift.cpp  aysift.h  exp.cpp  exp.h  main.cpp  siftmatch.vcxproj  siftmatch.vcxproj.filters  siftmatchmain  test_aysift.h  test_ground.h  testboost.h  util.cpp  util.h
siftmatch/testdata/: out.txt
siftmatch/testdata/Sample1/: trxy_s2_00.tif  trxy_s2_01.tif  trxy_s2_02.tif  trxy_s2_03.tif  trxy_s2_04.tif  trxy_s2_05.tif  trxy_s2_06.tif  trxy_s2_07.tif  trxy_s2_08.tif  trxy_s2_09.tif  trxy_s2_10.tif  trxy_s2_11.tif  trxy_s2_12.tif  trxy_s2_13.tif  trxy_s2_14.tif  trxy_s2_15.tif  trxy_s2_16.tif  trxy_s2_17.tif  trxy_s2_18.tif  trxy_s2_19.tif  trxy_s2_20.tif
siftmatch/testdata/Sample14/: Sample 14 Commanded Displacement.csv
siftmatch/testdata/Sample15/: CommandedDisplacementLineCut.xlsx
siftmatch/testdata/Sample2/: trs2_b8_00.tif  trs2_b8_01.tif  trs2_b8_02.tif  trs2_b8_03.tif  trs2_b8_04.tif  trs2_b8_05.tif  trs2_b8_06.tif  trs2_b8_07.tif  trs2_b8_08.tif  trs2_b8_09.tif  trs2_b8_10.tif  trs2_b8_11.tif  trs2_b8_12.tif  trs2_b8_13.tif  trs2_b8_14.tif  trs2_b8_15.tif  trs2_b8_16.tif  trs2_b8_17.tif  trs2_b8_18.tif  trs2_b8_19.tif  trs2_b8_20.tif
siftmatch/testdata/Sample3/: sin_reference.tif
siftmatch/testdata/Sample4/: Sample 4 Reference.tif  Sample4-000 X0.00 Y0.00 N8 C50 R0.tif  Sample4-001 X0.10 Y0.10 N8 C50 R0.tif  Sample4-002 X0.20 Y0.20 N8 C50 R0.tif  Sample4-003 X0.30 Y0.30 N8 C50 R0.tif  Sample4-004 X0.40 Y0.40 N8 C50 R0.tif  Sample4-005 X0.50 Y0.50 N8 C50 R0.tif  (+5 more)
siftmatch/x64/Debug/: vc141.idb
(+91 files in other folders)
